--- a/Consts/MainMultilangConst.zh.resx
+++ b/Consts/MainMultilangConst.zh.resx
@@ -256,7 +256,7 @@
     <value>浏览器</value>
   </data>
   <data name="_ConfErrorMsg" xml:space="preserve">
-    <value>配置无法识别，请检查配置文件中是否含有语法错误</value>
+    <value>配置文件中含有语法错误，配置无法识别</value>
   </data>
   <data name="_GameClickOnceMsg" xml:space="preserve">
     <value>就知道你会点，但其实什么事情都不会发生的。嘻嘻</value>
@@ -279,8 +279,8 @@
   <data name="_GameStartMsg" xml:space="preserve">
     <value>不，求你杀了我，我...控制不住了...</value>
   </data>
-  <data name="_HostErrorMsg" xml:space="preserve">
-    <value>规则无法识别，请检查伪造规则中是否含有语法错误</value>
+  <data name="_HostErrorPrompt" xml:space="preserve">
+    <value>伪造规则中含有语法错误，部分规则无法识别，是否仍然继续?</value>
   </data>
   <data name="_KillBrowserProcessPrompt" xml:space="preserve">
     <value>启动前将关闭所选浏览器的所有进程，是否继续？</value>
@@ -290,6 +290,12 @@
   </data>
   <data name="_LaunchProxyPrompt" xml:space="preserve">
     <value>使用完请务必记得回来手动关闭代理，是否继续?</value>
+  </data>
+  <data name="_NginxHttpPortOccupiedPrompt" xml:space="preserve">
+    <value>本地 80 端口被占用，这可能导致 http 连接无法自动跳转到 https，是否继续?</value>
+  </data>
+  <data name="_NginxHttpsPortOccupiedPrompt" xml:space="preserve">
+    <value>本地 443 端口被占用，这可能导致全局伪造无法正常生效，是否继续?</value>
   </data>
   <data name="_OverrideUpstreamHostPrompt" xml:space="preserve">
     <value>上游规则有更新可用，需要更新吗？否则只为你打开上游规则网页</value>
